--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,44 @@ h4 {
   text-align: left;
 }
 
+
+.video-container {
+  position: relative;
+  max-width: 800px;
+  margin: auto;
+}
+
+.video {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.play-button {
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60px;
+  height: 60px;
+  background-color: #A1554C;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.play-icon {
+  content: ""; /* Empty content to create a pseudo-element */
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 12px 0 12px 20px; /* Adjust the border-width to change the triangle size */
+  border-color: transparent transparent transparent white; /* Set triangle color */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* HeroSection */
 
 .hero-section {
