--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,11 @@ h4 {
   border-radius: 50%;
   cursor: pointer;
 }
-
+.imgi-size{
+  max-width: 100%; /* Ensure the image doesn't exceed its container */
+  max-height: 100%;
+  margin-top: 100px; /* Adjust the margin as needed */
+  }
 .play-icon {
   content: ""; /* Empty content to create a pseudo-element */
   width: 0;
