--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #110915;
-  --secondary-color: #b04863;
+  --secondary-color: linear-gradient(to right, #437481,#865A33, #4D2951) !important;
+  
   --btn-color: #6a3f3e;
   --btn-hover: #865555;
 
@@ -37,7 +38,7 @@ h4 {
 }
 
 .navbar img {
-  width: 100px;
+  width: 130px;
   height: 68px;
  
 }
@@ -130,6 +131,17 @@ h4 {
   max-height: 100%;
   margin-top: 100px; /* Adjust the margin as needed */
   }
+  .imgi-size::before {
+    content: "";
+    position: relative; 
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(orange, transparent 50%);
+    pointer-events: none;
+    z-index: 10; 
+  }
 .play-icon {
   content: ""; /* Empty content to create a pseudo-element */
   width: 0;
@@ -158,12 +170,13 @@ h4 {
 .Hero-text {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: right;
+  align-items: right;
+  text-align: left; 
 }
 
 .Hero-text h1 {
-  color:#ffffff;
+  color: #000;;
   font-family: var(--secondry-font);
 }
 
@@ -212,6 +225,8 @@ form {
 
 .Signup-container .footer-container {
   margin: 6rem !important;
+  background: linear-gradient(to right, #437481, #865A33, #4D2951) !important;
+  
 }
 
 .signup {
@@ -220,13 +235,13 @@ form {
 
 .signup-button {
   margin-top: 1rem;
-  background-color: var(--btn-color) !important;
+  background-color: #6F348E !important;
   border-radius: 5px;
   border-color: transparent;
   font-size: 18px;
-  background-color: var(--btn-color);
+  background-color: #6f348e;
   color: white;
-  width: 25rem;
+  width: 15rem;
 }
 
 
@@ -252,61 +267,11 @@ form {
   width: 50%;
 }
 
-.terms-message {
-  font-size: 12px;
-  color: #777;
-  text-align: center;
-  margin-top: 20px;
-}
-
-form h2 {
-  padding-bottom: 1rem !important;
-}
-
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 3rem;
-}
-
-.login-container .form-container {
-  width: 100%;
-  background-color: white;
-  padding-top: 0;
-  /* padding-bottom: 2rem; */
-  justify-content: center;
-  align-items: center;
-  border-radius: 2rem;
-}
-
-.login-container .form-container .form-section {
-  text-align: left;
-  font-size: 18px;
-  color: white;
-}
-
-.login-btn {
-  background-color: var(--btn-color) !important;
-  border-radius: 5px;
-  border-color: transparent;
-  font-size: 18px;
-  background-color: var(--btn-color);
-  color: white;
-  width: 25rem;
-  margin-bottom: 1rem;
-}
-
-.login-btn:hover {
-  background-color: var(--btn-hover) !important;
-}
-
-/* Footer CSS  */
 
 .footer-container {
-  padding-top: 2rem;
-  background-color: white;
-  margin-top: 2rem;
+  padding-top: 1rem;
+  background: linear-gradient(to right, #041A22, #073035, #3D2E19, #23131E) !important;
+  margin-top: 5rem;
   display: grid;
   align-items: center;
 }
@@ -317,22 +282,30 @@ form h2 {
   display: flex;
 }
 .footer-logo img {
-  /* margin-left: 4rem; */
-  width: 50%;
-  height: auto;
+   margin-left: 4rem; 
+  width: 40%;
+  height: 40%;
+}
+
+.footer-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: white;
+  margin-bottom: 10px;
 }
 .social {
   display: flex;
-  /* align-items: center; */
-  justify-content: center;
+  align-items: flex-end; /* Align to the bottom */
+  justify-content: flex-end; /* Align to the left */
   margin: 1rem 0;
 }
+
 .social img {
   width: 30px;
   height: auto;
   margin-right: 10px;
 }
-
 .list-unstyled li a {
   text-decoration: none;
   color: black;
